--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
 <h1>This is the welcome page</h1>
 
+<%= link_to "Recent Messages", messages_path %>
+<%= link_to "Recent Responses", responses_path %>
