--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,40 @@
-<h1>This is the welcome page</h1>
+<div class="container">
+<div id="welcome-hero" class="hero-unit span9">
+  <div id="content-holder">
+    <div id="main-content">
+      <h1>Welcome to Metro Texter</h1>
+      <p>Metro Texter sends you arrival times on DC Metro when you text it the name of a Metro station.</p>
+      <p>Go ahead.  Try me.</p>
+    </div>
+    <div id="use-content">
+      <h1>Here are the Deets</h1>
+      <p>Text (202) 800-1876 with the name of a Metro station and receive a reply with upcoming arrivals. </p>
+      <p>It's that simple. </p>
+    </div>
+    <div id="text-content">
+      <h1>You're Really Lazy</h1>
+      <p>I respect that. Enter your ten digit phone number and you'll receive instructions via text.</p>
+      <%= form_tag instructions_path %>
+      <%= text_field_tag "send_to", nil, :placeholder => "enter a ten digit phone number" %>
+      <%= submit_tag "hit me", :id =>"submit-number" %>
+    </div>
+    <div id="contact-content">
+      <h1>Let's Chat</h1>
+      <p>Feedback? Compliments? TED Talk Suggestions?  I'm lonely, lets do this.</p>
+      <%= mail_to "andrewglass1@gmail.com", "email me", :target => "_blank" %>
+      <%= link_to "facebook", "http://www.facebook.com/andyglass1", :target => "_blank"  %>
+      <%= link_to "twitter", "http://www.twitter.com/andrewglass1", :target => "_blank" %>
 
-<%= link_to "Recent Messages", messages_path %>
-<%= link_to "Recent Responses", responses_path %>
+    </div>
+  </div>
+  <div>
+    <ul id="buttons">
+      <li><a id="use-button" class="btn btn-primary btn-large"><i class="icon-question-sign icon-white"></i> how to use >></a></li>
+      <li><a id="text-button" class="btn btn-primary btn-large"><i class="icon-bullhorn icon-white"></i> text me instructions >></a></li>
+      <li><a id="contact-button" class="btn btn-primary btn-large"><i class="icon-user icon-white"></i> contact me >></a></li>
+    </ul>
+  </div>
+<%= link_to "crafted with love by andy glass", "http://andyglass.net/", :target => "_blank", :id => "andy" %>
+
+</div>
+</div>
