--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+<div id="welcome-hero" class="hero-unit span9">
 <h1>Messages</h1>
 
 <hr>
@@ -16,4 +18,5 @@
   <% end %>
 </table>
 
-
+</div>
+</div>
