--- a/app/views/responses/index.html.erb
+++ b/app/views/responses/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Responses</h1>
+<div class="container">
+<div id="welcome-hero" class="hero-unit span9">
+ <h1>Responses</h1>
 
 <hr>
 <table>
@@ -13,3 +15,6 @@
   <tr>
   <% end %>
 </table>
+
+</div>
+</div>
