--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -24,13 +24,18 @@
       <%= mail_to "andrewglass1@gmail.com", "email me", :target => "_blank" %>
       <%= link_to "facebook", "http://www.facebook.com/andyglass1", :target => "_blank"  %>
       <%= link_to "twitter", "http://www.twitter.com/andrewglass1", :target => "_blank" %>
-
+    </div>
+    <div id="hotkey-content">
+      <h1>Set Hot Keys For Stations</h1>
+      <p>Text "set phrase to station-name" and Metro Texter will send you arrivals when you it receives that phrase from your number.</p>
+      <p> i.e. "set home to chinatown"</p>
     </div>
   </div>
   <div>
     <ul id="buttons">
-      <li><a id="use-button" class="btn btn-primary btn-large"><i class="icon-question-sign icon-white"></i> how to use >></a></li>
+      <li><a id="use-button" class="btn btn-primary btn-large"><i class="icon-info-sign icon-white"></i> how to use >></a></li>
       <li><a id="text-button" class="btn btn-primary btn-large"><i class="icon-bullhorn icon-white"></i> text me instructions >></a></li>
+      <li><a id="hotkey-button" class="btn btn-primary btn-large"><i class="icon-fire icon-white"></i> set hot keys >></a></li>
       <li><a id="contact-button" class="btn btn-primary btn-large"><i class="icon-user icon-white"></i> contact me >></a></li>
     </ul>
   </div>
