--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -3,18 +3,18 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-
-body              { padding-bottom: 20px; background-color: #04C; background-image: url("http://i.imgur.com/iN3kg.jpg"); background-size: 100%; background-repeat: no-repeat;}
-
+body              { background: url("http://i.imgur.com/iN3kg.jpg") no-repeat center center fixed; }
 #content-holder   { width: 870px; height: 200px;}
 #welcome-hero     { margin-top: 150px; margin: 110px auto 0 auto; float: none; position: relative;}
 #welcome-hero p   { margin-top: 20px; margin-bottom: 20px;}
 #use-content      { display: none;}
 #text-content     { display: none;}
 #contact-content  { display: none;}
+#hotkey-content   { display: none;}
+
 
 #submit-number    { margin-bottom: 10px;}
 #andy             { position: absolute; bottom: 0px; left: 0px; margin-left: 10px;}
-#buttons li       { display: inline; margin-right: 10px;}
+#buttons li       { display: inline; }
 // #use-button hover
 // #main-content
