--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -5,7 +5,9 @@
 
 body              { background: url("http://i.imgur.com/iN3kg.jpg") no-repeat center center fixed; }
 #content-holder   { width: 870px; height: 200px;}
-#welcome-hero     { margin-top: 150px; margin: 110px auto 0 auto; float: none; position: relative;}
+#welcome-hero     { margin: 80px auto 0 auto; float: none; position: relative;}
+#notice-hero      { color: white; background-color: #006DCC; padding-top: 20px; padding-bottom: 20px; margin: 30px auto 0 auto; float: none; position: relative;}
+
 #welcome-hero p   { margin-top: 20px; margin-bottom: 20px;}
 #use-content      { display: none;}
 #text-content     { display: none;}
@@ -16,5 +18,6 @@ body              { background: url("http://i.imgur.com/iN3kg.jpg") no-repeat ce
 #submit-number    { margin-bottom: 10px;}
 #andy             { position: absolute; bottom: 0px; left: 0px; margin-left: 10px;}
 #buttons li       { display: inline; }
+#buttons          { margin-top: 20px;}
 // #use-button hover
 // #main-content
