style changes to layout

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.container        { position: relative; margin: auto; padding: 40px 15px 50px 15px; width: 800px;}
 p                 { font-size: 14px; }
 h1                { font-size: 18px; }
 .btn              { font-size: 12px; }
