--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <% if notice.present? %>
-    <div id="notice-hero" class="hero-unit span9"><%= notice %></div>
+    <div id="notice-hero" class="hero-unit"><%= notice %></div>
   <% end %>
-  <div id="welcome-hero" class="hero-unit span9">
+  <div id="welcome-hero" class="hero-unit">
     <div id="content-holder">
       <div id="main-content">
         <h1>Welcome to Metro Texter</h1>
