fix some stylin

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -2,25 +2,16 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.container        { position: relative; margin: 15px auto 0 auto; width: 800px; height: 100%;}
-p                 { font-size: 14px; }
-h1                { font-size: 18px; }
-.btn              { font-size: 12px; }
 body              { background: url("http://i.imgur.com/iN3kg.jpg") no-repeat center center fixed; }
-#content-holder   { width: 870px; height: 200px;}
-#welcome-hero     { margin: 80px auto 80px auto; float: none; position: relative;}
-#notice-hero      { color: white; background-color: #006DCC; padding-top: 20px; padding-bottom: 20px; margin: 30px auto 0 auto; float: none; position: relative;}
-
-#welcome-hero p   { margin-top: 20px; margin-bottom: 20px;}
-#use-content      { display: none;}
-#text-content     { display: none;}
-#contact-content  { display: none;}
-#hotkey-content   { display: none;}
+.container        { position: relative; margin: 15px auto 0 auto; width: 850px; height: 100%;}
+.phone-container  { width:320px; display: inline-block;}
+.content-container{ width:495px; display: inline-block; vertical-align: top; padding-top: 40px;
+  .header { color: white; font-size: 80px;}
+  .sub-header {color: white; font-size: 30px; margin-top: 20px;}
+  .instructions {color: white; font-size: 18px; line-height: 20px; margin-top: 30px;}
+}
 
 
-#submit-number    { margin-bottom: 10px;}
-#andy             { position: absolute; bottom: 0px; left: 0px; margin-left: 10px;}
-#buttons li       { display: inline; }
-#buttons          { margin-top: 20px;}
+
 // #use-button hover
 // #main-content
