--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Texter</title>
+  <title>MetroTexter: DC Metro Times via SMS</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+
+  <meta name="author" content="Andrew Glass">
+  <meta name="description" content="MetroTexter: Use SMS text messages to receive arrival times for the DC Metro."/>
+
+  <meta property=”og:type” content=website/>
+  <meta property="og:title" content="MetroTexter"/>
+  <meta property="og:image" content="http://metrotexter.herokuapp.com/assets/iphone.png"/>
+  <meta property="og:url" content="http://metrotexter.herokuapp.com/" />
+  <meta property="og:description" content="MetroTexter: Use SMS text messages to receive arrival times for the DC Metro." />
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:url" content="http://metrotexter.herokuapp.com/" />
+  <meta name="twitter:title" content="MetroTexter">
+  <meta name="twitter:description" content="MetroTexter: Use SMS text messages to receive arrival times for the DC Metro">
+  <meta name="twitter:image" content="http://metrotexter.herokuapp.com/assets/iphone.png" />
 </head>
 <body>
 
