change positioning of credits

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -33,4 +33,4 @@ body              { background: url("http://i.imgur.com/iN3kg.jpg") no-repeat ce
 }
 
 
-.credits { position: absolute; color: white; bottom: 10px; right: 20px;}
+.credits { position: fixed; color: white; bottom: 10px; right: 20px;}
