--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -4,7 +4,7 @@
 
 
 body              { background: url(background.jpg) no-repeat center center fixed; }
-.container        { position: relative; margin: 15px auto 0 auto; width: 850px; height: 100%;}
+.container        { width: 850px; margin: auto; position: absolute; top: 0; left: 0; bottom: 0; right: 0; height: 580px;}
 .phone-container  { width:320px; display: inline-block;}
 .content-container{ width:495px; display: inline-block; vertical-align: top; padding-top: 40px;
   .header { color: white; font-size: 80px;}
