remove some crud, add viewport meta tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0;">
+
   <meta name="author" content="Andrew Glass">
   <meta name="description" content="MetroTexter: Use SMS text messages to receive arrival times for the DC Metro."/>
 
