--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,13 +1,18 @@
 <div class="container">
+
   <div class="phone-container">
     <%= image_tag('iphone.png') %>
   </div>
+
   <div class="content-container">
-    <h2 class="header"> MetroTexter</h2>
-    <h2 class="sub-header">DC Metro Train Times via SMS</h2>
+    <div id="contact-text">
+      <div>MetroTexter</div>
+      <div>DC Metro Train Times via SMS</div>
+    </div>
 
     <h2 class="instructions">Text the name of a Metro station to (202) 800-1876 and receive a reply with upcoming arrivals</h2>
     <h2 class="instructions">Text "set PHRASE to NAME OF STATION" and Metro Texter will send you arrivals when you send that phrase</h2>
+
     <div class="form-container">
       <%= form_tag({controller: "welcome", action: "send_instructions"}, method: "post", id: "instruction-form", remote: true) do %>
         <%= text_field_tag :number, "", placeholder: "Enter a 10 digit phone number" %>
@@ -16,6 +21,9 @@
       <h2 id="thanks" class="instructions">Thanks. I'll text you.</h2>
     </div>
   </div>
-</div>
 
-<a href="http://www.andyglass.net" class="credits">Crafted with love by Andy Glass</a>
+  <a href="http://www.andyglass.net" class="credits" target="_blank">Crafted with love by Andy Glass</a>
+  <div id="mobile-credit-text">
+    <div><a class="mail-link" href="http://www.andyglass.net" target="_blank">Crafted with love by Andy Glass</a></div>
+  </div>
+</div>
