--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0;">
 
+  <link href='http://fonts.googleapis.com/css?family=Cabin+Condensed' rel='stylesheet' type='text/css'>
+
   <meta name="author" content="Andrew Glass">
   <meta name="description" content="MetroTexter: Use SMS text messages to receive arrival times for the DC Metro."/>
 
