--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -38,6 +38,55 @@ body              { background: url(background.jpg) no-repeat center center fixe
 #mobile-credit-text {display: none;}
 
 
+.messages-wrapper {
+  display: none;
+  position: relative;
+}
+.message {
+  border-radius: 20px 20px 20px 20px;
+  margin: 0 15px 10px;
+  padding: 15px 20px;
+  position: relative;
+}
+.message.to {
+  background-color: #2095FE;
+  color: #fff;
+  margin-left: 80px;
+}
+.message.from {
+  background-color: #E5E4E9;
+  color: #363636;
+  margin-right: 80px;
+}
+.message.to + .message.to,
+.message.from + .message.from {
+  margin-top: -7px;
+}
+.message:before {
+  border-color: #2095FE;
+  border-radius: 50% 50% 50% 50%;
+  border-style: solid;
+  border-width: 0 20px;
+  bottom: 0;
+  clip: rect(20px, 35px, 42px, 0px);
+  content: " ";
+  height: 40px;
+  position: absolute;
+  right: -50px;
+  width: 30px;
+  z-index: -1;
+}
+.message.from:before {
+  border-color: #E5E4E9;
+  left: -50px;
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";
+}
+
 // responsive
 
 @media(max-width:729px){
@@ -54,4 +103,5 @@ body              { background: url(background.jpg) no-repeat center center fixe
     a{ color: white; &:hover {text-decoration: none;}}
   }
 
+  .messages-wrapper{display: block;}
 }
