--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -4,7 +4,13 @@
 
 
 a, p, div, h1, h2, h3, input {font-family: 'Cabin Condensed', sans-serif;}
-body              { background: url(background.jpg) no-repeat center center fixed; }
+body              {
+  background: url(background.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
 .container        { width: 850px; margin: auto; position: absolute; top: 0; left: 0; bottom: 0; right: 0; height: 580px;}
 .phone-container  { width:320px; display: inline-block;}
 .content-container{ width:495px; display: inline-block; vertical-align: top; padding-top: 40px;
