--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -27,8 +27,8 @@
 
   <div class="content-container">
     <div id="contact-text">
-      <div>MetroTexter</div>
-      <div>DC Metro Train Times via SMS</div>
+      <h1>MetroTexter</h1>
+      <h3>DC Metro Train Times via SMS</h3>
     </div>
 
     <h2 class="instructions">Text the name of a Metro station to (202) 800-1876 and receive a reply with upcoming arrivals</h2>
